2001-11-22  Laurent Julliard  <Laurent.Julliard@xrce.xerox.com>

	* Headers/gnustep/base/Foundation.h: Fixed NSNumberFormatter.h missing.

Thu Nov 22 00:52:57 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile (CVS_MODULE_NAME): Define.

2001-11-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSOutput.m:
	* Tools/AGSOutput.h:
	* Tools/AGSIndex.h:
	* Tools/AGSIndex.m:
	* Tools/AGSParser.h:
	* Tools/AGSParser.m:
	* Tools/AGSHtml.h:
	* Tools/AGSHtml.m:
	* Tools/autogsdoc.m: Many bugfixes and enhancements ... generate
	html as well as gsdoc.

2001-11-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSXML.m: Implement NSCopying protocol for most classes.

2001-11-19  Adam Fedor  <fedor@gnu.org>

	* Source/simple-load.h (__objc_dynamic_get_symbol_path): Fix
	typo.

	* Tools/gdomap.c (nameServer): Print strerror before exiting for
	more helpful message.
	
2001-11-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUser.m:
	* Headers/Foundation/NSUserDefaults.h:
	* Documentation/gsdoc/NSUserDefaults.gsdoc:
	* Source/NSUserDefaults.m: Changed the method name +resetUserDefaults
	to be +resetStandardUserDefaults for compatibility with MacOS-X, which
	has now implemented an equivalent for the GNUstep method.
	* Source/NSPortNameServer.m: When removing a port, remove from
	internal name tables even if gdomap reports no name to unregister.
	In ([-removePort:]) retain set of names for duration of operation -
	fix suggested by Gerrit Van Dyk

2001-11-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNumber.m: describe char and unsigned char as numbers
	rather than ascii characters.  Use g format for floats.
	Use 'true' and 'false' for boolean output ... for MacOS-X compatibility.
	* Source/NSConcreteNumber.m: ditto
	* Source/GSFormat.m: Fix bug in formatting short integers - was trying
	to treat them as full sized.
	* headers/Foundation/NSString.h: Fix error in initWithFormat:locale:,...
	* Source/NSString.m: ditto ... was missing varargs